--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
-            debuggable true
+            debuggable false
             signingConfig signingConfigs.config
         }
     }
