--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
+     /*   release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
+        */
         debug {
             debuggable false
             signingConfig signingConfigs.config
